[package]
name = "fast-csv-to-json"
version = "0.3.1"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "Fast CSV to JSON - A simple CLI tool for converting CSV file content to JSON."
repository = "https://github.com/ming900518/csv-to-json/"
keywords = ["cli", "csv", "json"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
polars = { version = "0.28.0", features = ["performant"] }
indexmap = {version = "1.9.3", features = ["serde", "rayon"] }
mimalloc = "0.1.36"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rayon = "1.7.0"

[profile.release]
lto = true
panic = "abort"
